# neba

./: .gitignore  .gitlab-ci.yml  .readthedocs.yml  LICENSE  README.md  config.py  config.toml  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  tests.yml
ci/: pre-commit.sh  requirements-dev.yml  requirements.yml
docs/: Makefile
docs/source/: api.rst  conf.py  configuration.rst  dask.rst  datasets.rst  existing_modules.rst  existing_plugins.rst  extending.rst  index.rst  motivations.rst  parameters.rst
docs/source/_ext/: autodoc_trait.py
docs/source/_templates/: sphinx-theme-version.html  version.html
docs/source/_templates/autosummary/: class.rst  module.rst
docs/source/about/: index.rst  motivations.rst
docs/source/api/: config.rst  data.rst  index.rst
docs/source/api/_generated/: neba.config.section.Section.rst
docs/source/config/: autodoc_trait.rst  extending.rst  index.rst  usage.rst
docs/source/configuration/: autodoc_trait.rst  dask.rst  extending.rst  index.rst  usage.rst
docs/source/data/: existing_modules.rst  index.rst  usage.rst
docs/source/datasets/: existing_modules.rst  index.rst  usage.rst
examples/: simple_project.py  test_dataset.py
src/: autodoc_trait.py
src/data_assistant/: __init__.py  autodoc_trait.py  dataset.py  parameters.py  util.py
src/data_assistant/config/: __init__.py  application.py  core.py  dask_config.py  loader.py  mypy_plugin.py  parameters.py  scheme.py  section.py  serializer.py  util.py  utils.py
src/data_assistant/config/loaders/: __init__.py  cli.py  core.py  json.py  python.py  toml.py  yaml.py
src/data_assistant/data/: __init__.py  data_manager.py  dataset.py  filefinder.py  loader.py  module.py  params.py  plugin.py  register.py  source.py  store.py  util.py  writer.py  xarray.py
src/data_assistant/dataset/: __init__.py  cache.py  dataset.py  file_manager.py  filefinder.py  loader.py  module.py  plugin.py  register.py  source.py  util.py  writer.py  xarray.py
src/neba/: __init__.py  autodoc_trait.py  util.py  utils.py
src/neba/config/: __init__.py  application.py  docs.py  mypy_plugin.py  section.py  traits.py  types.py  util.py
src/neba/config/loaders/: __init__.py  cli.py  core.py  json.py  python.py  toml.py  yaml.py
src/neba/data/: __init__.py  dataset.py  interface.py  loader.py  module.py  params.py  source.py  store.py  types.py  util.py  writer.py  xarray.py
tests/: conftest.py  generic_sections.py  scheme_generation.py  section_generation.py  test_util.py  test_utils.py  trait_generation.py  util.py  utils.py
tests/config/: config.json  config.py  config.toml  config.yaml  generic_config.py  section_generation.py  test_application.py  test_docs.py  test_loaders.py  test_section.py  test_traits.py  test_util.py  test_various.py  trait_generation.py
tests/data/: test_dataset.py  test_interface.py  test_params.py  test_source.py  test_store.py  test_util.py  test_writer.py  test_xarray.py
tests/datasets/: test_dataset.py  test_params.py  test_source.py
tests/unit/: config.json  config.py  config.toml  config.yaml  test_application.py  test_loaders.py  test_scheme.py  test_section.py  test_traits.py  test_various.py
