
[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
version = '0.0.1'

name = 'data-assistant'
authors = [
    {name='Clément Haëck', email='clement.haeck@locean.ipsl.fr'}
]
description = 'Help manage multi-file datasets'

readme = 'README.md'
requires-python = '>=3.11'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Topic :: Utilities'
]

dependencies = [
"traitlets>=5.13"
]

# dependencies = [
#     'xarray>=2023.7',
#     'dask>=2023.7',
#     'filefinder>=1.0'
# ]

[project.urls]
'Homepage' = 'https://gitlab.in2p3.fr/biofronts/data-assistant'

[tool.mypy]
plugins = 'numpy.typing.mypy_plugin'
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = 'py311'

[tool.ruff.lint]
select = [
       'E',  # pycodestyle
       'W',  # pycodestyle
       'I',  # isort
       'N',  # pep8-name
       'B',  # bugbear
       'G',  # flake8-logging-format
       'F',  # pyflakes
       'UP',  #pyupgrade
       'D',  #pydocstyle
]

ignore = [
       'D105', # missing docstring on magic methods
       'E226', # missing whitespace around arithmetic operator
       'D203', # one blank line before class
       'D213', # multiline docstring start at 2nd line
       'D417', # not all parameters need doc
       'B905', # zip without strict parameter
]
unfixable = ["F401"]

[tool.ruff.lint.pycodestyle]
max-line-length = 90

[tool.ruff.lint.pydocstyle]
convention = 'numpy'

[tool.ruff.format]
quote-style = 'double'
