
[build-system]
requires = ['setuptools>=64', 'setuptools-scm>=8']
build-backend = 'setuptools.build_meta'

[project]
dynamic = ['version']

name = 'data-assistant'
authors = [
    {name='Clément Haëck', email='clement.haeck@locean.ipsl.fr'}
]
description = 'Help manage parameters and datasets'

readme = 'README.md'
requires-python = '>=3.11'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Topic :: Utilities'
]

dependencies = [
    "traitlets>=5.13"
]

[project.optional-dependencies]
dev = [
    'xarray',
    'dask',
    'tomlkit',
    'ruamel.yaml>=0.18',
    'filefinder>=1.2',
    'ruff',
    'mypy>=1.5',
    'pytest>=7.4',
    'coverage',
    'pytest-cov',
    'pytest-forked',
    'hypothesis',
    'sphinx',
    'sphinx-book-theme',
]
tests = [
    'xarray',
    'dask',
    'tomlkit',
    'ruamel.yaml>=0.18',
    'filefinder>=1.2',
    'pytest>=7.4',
    'coverage',
    'pytest-cov',
    'pytest-forked',
    'hypothesis',
]
docs = [
    'xarray',
    'dask',
    'tomlkit',
    'ruamel.yaml>=0.18',
    'filefinder>=1.2',
    'sphinx',
    'pydata-sphinx-theme',
    'sphinx-design',
    'sphinx-copybutton',
]


[project.urls]
'Homepage' = 'https://gitlab.in2p3.fr/biofronts/data-assistant'

[tool.setuptools_scm]

[tool.mypy]
plugins = ['numpy.typing.mypy_plugin', 'data_assistant.config.mypy_plugin']
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = 'py311'

[tool.ruff.lint]
select = [
       'E',  # pycodestyle
       'W',  # pycodestyle
       'I',  # isort
       'N',  # pep8-name
       'B',  # bugbear
       'G',  # flake8-logging-format
       'F',  # pyflakes
       'UP',  #pyupgrade
       'D',  #pydocstyle
]

ignore = [
       'D105', # missing docstring on magic methods
       'E226', # missing whitespace around arithmetic operator
       'D203', # one blank line before class
       'D213', # multiline docstring start at 2nd line
       'D417', # not all parameters need doc
       'B905', # zip without strict parameter
]
unfixable = ["F401"]

[tool.ruff.lint.pycodestyle]
max-line-length = 90

[tool.ruff.lint.pydocstyle]
convention = 'numpy'

[tool.ruff.format]
quote-style = 'double'
