
[build-system]
requires = ['setuptools>=64', 'setuptools-scm>=8']
build-backend = 'setuptools.build_meta'

[project]
dynamic = ['version']

name = 'neba'
authors = [
    {name='Clément Haëck', email='clement.haeck@locean.ipsl.fr'}
]
description = 'Help manage parameters and datasets'

readme = 'README.md'
requires-python = '>=3.11'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Topic :: Utilities'
]

dependencies = [
    "traitlets>=5.13",
    "levenshtein>=0.27",
]

[project.optional-dependencies]
dev = [
    'ruff',
    'mypy>=1.5',
]
tests = [
    'xarray',
    'netCDF4',
    'zarr',
    'numpy',
    'pandas',
    'dask',
    'tomlkit',
    'ruamel.yaml>=0.18',
    'filefinder>=1.2',
    'pytest>=7.4',
    'coverage',
    'pytest-cov',
    'pytest-forked',
    'hypothesis',
]
docs = [
    'xarray',
    'dask',
    'tomlkit',
    'ruamel.yaml>=0.18',
    'filefinder>=1.2',
    'sphinx==9.1.*',
    'sphinx-book-theme==1.1.*',
    'sphinx-design==0.7.*',
    'sphinx-copybutton==0.5.*',
]


[project.urls]
'Source' = 'https://github.com/Descanonge/neba'

[tool.setuptools_scm]

[tool.mypy]
plugins = ['numpy.typing.mypy_plugin', 'neba.config.mypy_plugin']
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = 'py311'

[tool.ruff.lint]
select = [
       'E',  # pycodestyle
       'W',  # pycodestyle
       'I',  # isort
       'N',  # pep8-name
       'B',  # bugbear
       'G',  # flake8-logging-format
       'F',  # pyflakes
       'UP',  #pyupgrade
       'D',  #pydocstyle
]

ignore = [
       'D105', # missing docstring on magic methods
       'E226', # missing whitespace around arithmetic operator
       'D203', # one blank line before class
       'D213', # multiline docstring start at 2nd line
       'D417', # not all parameters need doc
       'B905', # zip without strict parameter
]
unfixable = ["F401"]

[tool.ruff.lint.pycodestyle]
max-line-length = 90

[tool.ruff.lint.pydocstyle]
convention = 'numpy'

[tool.ruff.format]
quote-style = 'double'

[tool.coverage.report]
exclude_also = [
    'def __repr__',
    'raise NotImplementedError',
    'if (t\.)?TYPE_CHECKING',
]
omit = ['src/neba/autodoc_trait.py', 'src/neba/config/mypy_plugin.py']
